--- a/rundeck-jobs/openshift/create-rshiny.yaml
+++ b/rundeck-jobs/openshift/create-rshiny.yaml
@@ -1,4 +1,5 @@
-- description: 'creates an openshift rshiny component (for project bhw and component
+- defaultTab: summary
+  description: 'creates an openshift rshiny component (for project bhw and component
     bhw-be: bhw-be)'
   executionEnabled: true
   group: openshift
