--- a/jenkins-slaves/maven/Dockerfile.rhel7
+++ b/jenkins-slaves/maven/Dockerfile.rhel7
@@ -29,7 +29,7 @@ RUN yum-config-manager --enable rhel-server-rhscl-7-rpms && \
     INSTALL_PKGS="rh-maven33*" && \
     alternatives --set java $(alternatives --display java | awk '/family.*x86_64/ { print $1; }') && \
     # x86_EXTRA_RPMS=$(if [ "$(uname -m)" == "x86_64" ]; then echo -n java-1.8.0-openjdk-devel.i686 ; fi) && \
-    yum install -y $INSTALL_PKGS $x86_EXTRA_RPMS && \
+    yum install -y $INSTALL_PKGS $x86_EXTRA_RPMS --skip-broken && \
     # have temporarily removed the validation for java to work aroun known rhel 7.5 problem fixed in fedora; jupierce and gmontero are working with
     # the requisit folks to get that addressed ... will switch back to rpm -V $INSTALL_PKGS when that occurs
     rpm -V   rh-maven33 && \
