--- a/jenkins-slaves/maven/Dockerfile.rhel7
+++ b/jenkins-slaves/maven/Dockerfile.rhel7
@@ -25,6 +25,7 @@ ENV JAVA_HOME=/usr/lib/jvm/jre
 # Install Maven
 RUN yum-config-manager --enable rhel-server-rhscl-7-rpms && \
     yum-config-manager --disable epel >/dev/null || : && \
+    yum install -y wget && \
     alternatives --set java $(alternatives --display java | awk '/family.*x86_64/ { print $1; }') && \
 	wget https://repos.fedorapeople.org/repos/dchen/apache-maven/epel-apache-maven.repo -O /etc/yum.repos.d/epel-apache-maven.repo && \
 	sed -i s/\$releasever/6/g /etc/yum.repos.d/epel-apache-maven.repo && \
