--- a/jenkins-slaves/maven/Dockerfile.rhel7
+++ b/jenkins-slaves/maven/Dockerfile.rhel7
@@ -26,10 +26,11 @@ ENV JAVA_HOME=/usr/lib/jvm/jre
 RUN yum-config-manager --enable rhel-server-rhscl-7-rpms && \
     yum-config-manager --disable epel >/dev/null || : && \
     yum install -y wget && \
+    yum install -y java-1.8.0-openjdk-devel && \
     alternatives --set java $(alternatives --display java | awk '/family.*x86_64/ { print $1; }') && \
 	wget https://repos.fedorapeople.org/repos/dchen/apache-maven/epel-apache-maven.repo -O /etc/yum.repos.d/epel-apache-maven.repo && \
 	sed -i s/\$releasever/6/g /etc/yum.repos.d/epel-apache-maven.repo && \
-	yum install -y apache-maven --skip-broken && \
+	yum install -y apache-maven && \
     yum clean all -y && \
     mkdir -p $HOME/.m2
 
