--- a/jenkins-slaves/maven/Dockerfile.rhel7
+++ b/jenkins-slaves/maven/Dockerfile.rhel7
@@ -24,7 +24,7 @@ ENV JAVA_HOME=/usr/lib/jvm/jre
 
 # Install Maven
 RUN yum-config-manager --enable rhel-server-rhscl-7-rpms && \
-    yum-config-manager --disable epel >/dev/null || : && \
+    # yum-config-manager --disable epel >/dev/null || : && \
     INSTALL_PKGS="java-1.8.0-openjdk-devel.x86_64 rh-maven33*" && \
     alternatives --set java $(alternatives --display java | awk '/family.*x86_64/ { print $1; }') && \
     x86_EXTRA_RPMS=$(if [ "$(uname -m)" == "x86_64" ]; then echo -n java-1.8.0-openjdk-devel.i686 ; fi) && \
