--- a/jenkins-slaves/python/Dockerfile.rhel7
+++ b/jenkins-slaves/python/Dockerfile.rhel7
@@ -6,7 +6,7 @@ ENV PYTHON_VERSION=3.7.0
 
 # Install Python
 RUN set -x \
-    && INSTALL_PKGS="gcc make openssl-devel zlib-devel" \
+    && INSTALL_PKGS="gcc make openssl-devel zlib-devel libffi-devel" \
     && yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS \
     && yum clean all \
     && rm -rf /var/cache/yum/* \
