leave packages there ... libffi remove fails

--- a/jenkins-slaves/python/Dockerfile.rhel7
+++ b/jenkins-slaves/python/Dockerfile.rhel7
@@ -18,7 +18,7 @@ RUN set -x \
     && make altinstall \
     && cd .. \
     && rm -rf Python-${Python_VERSION} \
-    && yum remove -y $INSTALL_PKGS \
+#    && yum remove -y $INSTALL_PKGS \
     && python3 -V
 
 # Upgrade PIP
