--- a/jenkins-slaves/python/Dockerfile.rhel7
+++ b/jenkins-slaves/python/Dockerfile.rhel7
@@ -19,8 +19,7 @@ RUN set -x \
     && cd .. \
     && rm -rf Python-${Python_VERSION} \
 #    && yum remove -y $INSTALL_PKGS \
-    && which python \
-    && python3 -V
+    && python -V
 
 # Upgrade PIP
 RUN pip3 install --upgrade pip \
