--- a/jenkins-slaves/scala/Dockerfile.rhel7
+++ b/jenkins-slaves/scala/Dockerfile.rhel7
@@ -57,6 +57,9 @@ RUN cat $HOME/.sbt/repositories | sed -e "s|NEXUS_HOST|$NEXUS_HOST|g" > $HOME/.s
     sed -i.bak -e "s|NEXUS_PASSWORD|$NEXUS_PASSWORD|g" $HOME/.sbt/credentials && \
     rm $HOME/.sbt/credentials.bak && \
     cd /tmp/scala && \
+    . /tmp/set_java_proxy.sh && \
+    export SBT_OPTS=$JAVA_OPTS && \
+    rm $HOME/.sbt/repositories && \
 	sbt -v run && \
 	rm -rf target	
 
