remove nexus again

--- a/jenkins-slaves/maven/Dockerfile.rhel7
+++ b/jenkins-slaves/maven/Dockerfile.rhel7
@@ -26,11 +26,11 @@ ENV JAVA_HOME=/usr/lib/jvm/jre
 RUN yum-config-manager --enable rhel-server-rhscl-7-rpms && \
     # yum-config-manager --disable epel >/dev/null || : && \
     yum install -y wget && \
-    INSTALL_PKGS="java-1.8.0-openjdk-devel.x86_64 rh-maven33*" && \
     alternatives --set java $(alternatives --display java | awk '/family.*x86_64/ { print $1; }') && \
 	wget https://repos.fedorapeople.org/repos/dchen/apache-maven/epel-apache-maven.repo -O /etc/yum.repos.d/epel-apache-maven.repo && \
 	sed -i s/\$releasever/6/g /etc/yum.repos.d/epel-apache-maven.repo && \
-	yum install -y apache-maven && \
+    INSTALL_PKGS="java-1.8.0-openjdk-devel.x86_64 apache-maven*" && \
+	yum install -y $INSTALL_PKGS && \
     yum clean all -y && \
     mkdir -p $HOME/.m2
 
