--- a/jenkins-slaves/python/Dockerfile.rhel7
+++ b/jenkins-slaves/python/Dockerfile.rhel7
@@ -31,10 +31,8 @@ RUN curl -O https://www.python.org/ftp/python/${PYTHON_VERSION}/Python-${PYTHON_
 
 RUN rm -rf Python-${Python_VERSION} \
 #    && yum remove -y $INSTALL_PKGS \
-    && ln -s /var/lib/origin/Python-${PYTHON_VERSION}/python /usr/local/sbin/python3 \
-    && python -V
-
-RUN find / -iname python
+    && ln -s /Python-${PYTHON_VERSION}/python /usr/local/sbin/python3 \
+    && python3 -V
 
 RUN curl "https://bootstrap.pypa.io/get-pip.py" -o "get-pip.py" \
     && python3 get-pip.py
