--- a/jenkins-slaves/python/Dockerfile.rhel7
+++ b/jenkins-slaves/python/Dockerfile.rhel7
@@ -30,7 +30,7 @@ RUN curl -O https://www.python.org/ftp/python/${PYTHON_VERSION}/Python-${PYTHON_
     && cd ..
 
 RUN rm -rf Python-${Python_VERSION} \
-#    && yum remove -y $INSTALL_PKGS \
+    && yum remove -y $INSTALL_PKGS \
     && ln -s /Python-${PYTHON_VERSION}/python /usr/local/sbin/python3 \
     && python3 -V
 
