--- a/jenkins-slaves/python/Dockerfile.rhel7
+++ b/jenkins-slaves/python/Dockerfile.rhel7
@@ -3,6 +3,7 @@ FROM cd/jenkins-slave-base
 MAINTAINER Michael Sauter <michael.sauter@boehringer-ingelheim.com>
 
 ENV PYTHON_VERSION=3.6.0
+ENV INSTALL_PKGS="yum-utils groupinstall development gcc make openssl-devel zlib-devel"
 
 # Install Python
 # Option 1:
@@ -16,7 +17,6 @@ ENV PYTHON_VERSION=3.6.0
 
 # Option 2
 RUN set -x \
-    && INSTALL_PKGS="yum-utils groupinstall development gcc make openssl-devel zlib-devel" \
     && yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS \
     && yum clean all \
     && rm -rf /var/cache/yum/* \
