add local, version controlled template

--- a/boilerplates/be-scala-akka/Dockerfile
+++ b/boilerplates/be-scala-akka/Dockerfile
@@ -10,4 +10,7 @@ ENV SBT_OPTS="-Duser.home=/home/jenkins"
 
 RUN . /tmp/set_java_proxy.sh
 
+RUN mkdir /tmp/akka-http-quickstart-scala.g8
+COPY akka-http-quickstart-scala.g8/ /tmp/akka-http-quickstart-scala.g8
+
 ENTRYPOINT [""]
