--- a/boilerplates/be-scala-akka/Dockerfile
+++ b/boilerplates/be-scala-akka/Dockerfile
@@ -6,5 +6,11 @@ WORKDIR /data
 
 ENV HOME=/home/jenkins
 ENV SBT_CREDENTIALS="/home/jenkins/.sbt/credentials"
+ENV SBT_OPTS="-Duser.home=/home/jenkins"
+
+RUN . /tmp/set_java_proxy.sh
+
+RUN mkdir /tmp/akka-http-quickstart-scala.g8
+COPY akka-http-quickstart-scala.g8/ /tmp/akka-http-quickstart-scala.g8
 
 ENTRYPOINT [""]
