--- a/jenkins-slaves/scala/Dockerfile.rhel7
+++ b/jenkins-slaves/scala/Dockerfile.rhel7
@@ -29,8 +29,10 @@ RUN set -x \
 RUN yum -y install java-1.8.0-openjdk \
     && alternatives --set java $(alternatives --display java | awk '/family.*x86_64/ { print $1; }')
 
-RUN curl -O -L http://dl.bintray.com/sbt/rpm/sbt-1.1.6.rpm && \
-     yum -y install sbt-1.1.6.rpm
+ENV SBT_VERSION=1.1.6
+
+RUN curl -O -L http://dl.bintray.com/sbt/rpm/sbt-$SBT_VERSION.rpm && \
+     yum -y install sbt-$SBT_VERSION.rpm
 	
 RUN	mkdir -p $HOME/.sbt/1.0/plugins && \
 	mkdir -p $HOME/.sbt/0.13/plugins && \
@@ -58,9 +60,9 @@ RUN cat $HOME/.sbt/repositories | sed -e "s|NEXUS_HOST|$NEXUS_HOST|g" > $HOME/.s
     rm $HOME/.sbt/credentials.bak && \
     cd /tmp/scala && \
     . /tmp/set_java_proxy.sh && \
-    export SBT_OPTS=$JAVA_OPTS && \
-    if [[ $HTTP_PROXY != "" ]]; then echo "HTTPS proxy set - SBT bug - remove nexus repos"; rm $HOME/.sbt/repositories; fi && \
-    sbt -v run && \
+    export SBT_OPTS=$JAVA_OPTS" -Duser.home=/home/jenkins" && \
+    if [[ $HTTP_PROXY != "" ]]; then echo "HTTPS proxy set - SBT bug - remove nexus repos"; rm $HOME/.sbt/repositories; rm /usr/share/sbt/conf/sbtopts; rm /usr/share/sbt-launcher-packaging/conf/sbtopts; fi && \
+    sbt -v run && echo "c" && \
     rm -rf target	
 
 RUN	\
