--- a/jenkins-slaves/maven/Dockerfile.rhel7
+++ b/jenkins-slaves/maven/Dockerfile.rhel7
@@ -39,7 +39,17 @@ RUN yum-config-manager --enable rhel-server-rhscl-7-rpms && \
 # the SCL for all scripts without need to do 'scl enable'.
 ADD contrib/bin/scl_enable /usr/local/bin/scl_enable
 ADD contrib/bin/configure-slave /usr/local/bin/configure-slave
+
+# set java proxy var
+COPY set_maven_proxy.sh /tmp/set_maven_proxy.sh
+RUN chmod 777 /tmp/set_maven_proxy.sh
+
 ADD ./contrib/settings.xml $HOME/.m2/
+RUN mv $HOME/.m2/settings.xml $HOME/.m2/settings.xml.orig
+RUN /tmp/set_maven_proxy.sh 
+RUN xpr=$(cat /tmp/mvn_proxy)
+RUN cat $HOME/.m2/settings.xml.orig | sed 10a$xpr > $HOME/.m2/settings.xml
+RUN cat $HOME/.m2/settings.xml
 
 # install gradle ..
 ADD gradlew /tmp/gradlew
@@ -50,6 +60,7 @@ RUN ls /tmp/gradle/wrapper
 # set java proxy var
 COPY set_gradle_proxy.sh /tmp/set_gradle_proxy.sh
 RUN chmod 777 /tmp/set_gradle_proxy.sh
+
 RUN mkdir $GRADLE_USER_HOME
 RUN /tmp/set_gradle_proxy.sh 
 
