--- a/jenkins-slaves/maven/Dockerfile.rhel7
+++ b/jenkins-slaves/maven/Dockerfile.rhel7
@@ -48,6 +48,7 @@ ADD ./contrib/settings.xml $HOME/.m2/
 RUN mv $HOME/.m2/settings.xml $HOME/.m2/settings.xml.orig
 RUN /tmp/set_maven_proxy.sh 
 RUN xpr=$(cat /tmp/mvn_proxy)
+RUN xpr="${xpr//\\/\\\\}"
 RUN cat $HOME/.m2/settings.xml.orig | sed 10a$xpr > $HOME/.m2/settings.xml
 RUN cat $HOME/.m2/settings.xml
 
