--- a/jenkins-slaves/maven/Dockerfile.rhel7
+++ b/jenkins-slaves/maven/Dockerfile.rhel7
@@ -45,14 +45,14 @@ COPY set_maven_proxy.sh /tmp/set_maven_proxy.sh
 RUN chmod 777 /tmp/set_maven_proxy.sh
 
 ADD ./contrib/settings.xml $HOME/.m2/
-RUN mv $HOME/.m2/settings.xml $HOME/.m2/settings.xml.orig
-RUN /tmp/set_maven_proxy.sh 
-RUN xpr=$(cat /tmp/mvn_proxy)
-RUN xpr="${xpr//\\/\\\\}"
-RUN xpr="${xpr//|//\\|}"
-
-RUN cat $HOME/.m2/settings.xml.orig | sed -e "s|<proxies>|<proxies>$xpr|g" > $HOME/.m2/settings.xml
-RUN cat $HOME/.m2/settings.xml
+RUN mv $HOME/.m2/settings.xml $HOME/.m2/settings.xml.orig && \
+ /tmp/set_maven_proxy.sh && \
+ xpr=$(cat /tmp/mvn_proxy) && \
+ xpr="${xpr//\\/\\\\}" && \
+ xpr="${xpr//|//\\|}" && \
+ echo $xpr && \
+ cat $HOME/.m2/settings.xml.orig | sed -e "s|<proxies>|<proxies>$xpr|g" > $HOME/.m2/settings.xml && \
+ cat $HOME/.m2/settings.xml
 
 # install gradle ..
 ADD gradlew /tmp/gradlew
