--- a/jenkins-slaves/maven/Dockerfile.rhel7
+++ b/jenkins-slaves/maven/Dockerfile.rhel7
@@ -48,7 +48,7 @@ ADD ./contrib/settings.xml $HOME/.m2/
 RUN mv $HOME/.m2/settings.xml $HOME/.m2/settings.xml.orig && \
  /tmp/set_maven_proxy.sh && \
  xpr=$(cat /tmp/mvn_proxy) && \
- xpr="${xpr//\\/\\\\}" && \
+ xpr="${xpr//\//\\/}" && \
  xpr="${xpr//|//\\|}" && \
  echo $xpr && \
  cat $HOME/.m2/settings.xml.orig | sed -e "s|<proxies>|<proxies>$xpr|g" > $HOME/.m2/settings.xml && \
