spring cli version

--- a/boilerplates/be-springboot/Dockerfile
+++ b/boilerplates/be-springboot/Dockerfile
@@ -8,11 +8,12 @@ ENV SDKMAN_DIR $HOME/.sdkman
 # RUN \
 #    curl -s "https://get.sdkman.io" | bash
 
-#ARG SPRING_CLI_VERSION
+ARG SPRING_CLI_VERSION
 
 #RUN /bin/bash -lc "source /home/jenkins/.sdkman/bin/sdkman-init.sh && sdk install springboot $SPRING_CLI_VERSION && \
 #    spring --version"
-RUN mkdir /tmp/spring && \
+RUN echo SPRING_CLI_VERSION && \
+	$mkdir /tmp/spring && \
 	cd /tmp/spring
 
 RUN curl -O http://repo.spring.io/release/org/springframework/boot/spring-boot-cli/$SPRING_CLI_VERSION/spring-boot-cli-$SPRING_CLI_VERSION-bin.tar.gz 
