more curl rights try

--- a/boilerplates/be-springboot/Dockerfile
+++ b/boilerplates/be-springboot/Dockerfile
@@ -3,7 +3,7 @@ FROM cd/jenkins-slave-maven
 MAINTAINER "Clemens Utschig" <clemens.utschig-utschig@boehringer-ingelheim.com>
 
 ENV HOME=/home/jenkins
-ENV SDKMAN_DIR $HOME/.sdkman
+# ENV SDKMAN_DIR $HOME/.sdkman
 
 # RUN \
 #    curl -s "https://get.sdkman.io" | bash
@@ -13,10 +13,10 @@ ARG SPRING_CLI_VERSION
 #RUN /bin/bash -lc "source /home/jenkins/.sdkman/bin/sdkman-init.sh && sdk install springboot $SPRING_CLI_VERSION && \
 #    spring --version"
 RUN echo $SPRING_CLI_VERSION && \
-	mkdir /tmp/spring && \
-	cd /tmp/spring
+	mkdir $HOME/spring && \
+	cd $HOME/spring
 
-RUN curl -O http://repo.spring.io/release/org/springframework/boot/spring-boot-cli/$SPRING_CLI_VERSION/spring-boot-cli-$SPRING_CLI_VERSION-bin.tar.gz 
+RUN curl -O -L http://repo.spring.io/release/org/springframework/boot/spring-boot-cli/$SPRING_CLI_VERSION/spring-boot-cli-$SPRING_CLI_VERSION-bin.tar.gz 
 
 RUN tar -xvf *.gz
 
