--- a/boilerplates/be-springboot/Dockerfile
+++ b/boilerplates/be-springboot/Dockerfile
@@ -13,14 +13,13 @@ ARG SPRING_CLI_VERSION
 #RUN /bin/bash -lc "source /home/jenkins/.sdkman/bin/sdkman-init.sh && sdk install springboot $SPRING_CLI_VERSION && \
 #    spring --version"
 RUN echo $SPRING_CLI_VERSION && \
-	mkdir $HOME/spring && \
-	cd $HOME/spring
+	cd /tmp
 
 RUN curl -O -L http://repo.spring.io/release/org/springframework/boot/spring-boot-cli/$SPRING_CLI_VERSION/spring-boot-cli-$SPRING_CLI_VERSION-bin.tar.gz 
 
 RUN tar -xvf *.gz
 
-ENV SPRING_HOME /tmp/spring/$SPRING_CLI_VERSION
+ENV SPRING_HOME /tmp/$SPRING_CLI_VERSION
 
 ENV PATH $SPRING_HOME/bin:$PATH
 
