--- a/jenkins-slaves/maven/Dockerfile.rhel7
+++ b/jenkins-slaves/maven/Dockerfile.rhel7
@@ -69,6 +69,9 @@ RUN /tmp/set_gradle_proxy.sh
 
 RUN /tmp/gradlew -version
 
+#set java proxy via JAVA_OPTS as src
+RUN bash -l -c 'echo export JAVA_OPTS="$(/tmp/set_java_proxy.sh && echo $JAVA_OPTS)" >> /etc/bash.bashrc'
+
 RUN chown -R 1001:0 $HOME && \
     chmod -R g+rw $HOME
 USER 1001
