--- a/jenkins-slaves/maven/Dockerfile.rhel7
+++ b/jenkins-slaves/maven/Dockerfile.rhel7
@@ -39,7 +39,20 @@ RUN yum-config-manager --enable rhel-server-rhscl-7-rpms && \
 # the SCL for all scripts without need to do 'scl enable'.
 ADD contrib/bin/scl_enable /usr/local/bin/scl_enable
 ADD contrib/bin/configure-slave /usr/local/bin/configure-slave
+
+# set java proxy var
+COPY set_maven_proxy.sh /tmp/set_maven_proxy.sh
+RUN chmod 777 /tmp/set_maven_proxy.sh
+
 ADD ./contrib/settings.xml $HOME/.m2/
+RUN mv $HOME/.m2/settings.xml $HOME/.m2/settings.xml.orig && \
+ /tmp/set_maven_proxy.sh && \
+ xpr=$(cat /tmp/mvn_proxy) && \
+ xpr="${xpr//\//\\/}" && \
+ xpr="${xpr//|//\\|}" && \
+ echo $xpr && \
+ cat $HOME/.m2/settings.xml.orig | sed -e "s|<proxies>|<proxies>$xpr|g" > $HOME/.m2/settings.xml && \
+ cat $HOME/.m2/settings.xml
 
 # install gradle ..
 ADD gradlew /tmp/gradlew
@@ -50,10 +63,14 @@ RUN ls /tmp/gradle/wrapper
 # set java proxy var
 COPY set_gradle_proxy.sh /tmp/set_gradle_proxy.sh
 RUN chmod 777 /tmp/set_gradle_proxy.sh
+
 RUN mkdir $GRADLE_USER_HOME
 RUN /tmp/set_gradle_proxy.sh 
 
 RUN /tmp/gradlew -version
+
+#set java proxy via JAVA_OPTS as src
+RUN bash -l -c 'echo export JAVA_OPTS="$(/tmp/set_java_proxy.sh && echo $JAVA_OPTS)" >> /etc/bash.bashrc'
 
 RUN chown -R 1001:0 $HOME && \
     chmod -R g+rw $HOME
