--- a/rundeck-jobs/quickstarts/rshiny_app.yaml
+++ b/rundeck-jobs/quickstarts/rshiny_app.yaml
@@ -40,7 +40,7 @@
         cp -rv /tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/boilerplates/rshiny/* .
     - description: setup quickstarter for continuous integration
       jobref:
-        args: -component_id ${option.component_id} -project_id ${option.project_id} -quickstarter_directory /tmp/rundeck_${job.id}_${job.execid}/${option.component_id} -git_url_ssh ${option.git_url_ssh} -git_url_http ${option.git_url_http}
+        args: -component_type rshiny-app -component_id ${option.component_id} -project_id ${option.project_id} -quickstarter_directory /tmp/rundeck_${job.id}_${job.execid}/${option.component_id} -git_url_ssh ${option.git_url_ssh} -git_url_http ${option.git_url_http}
         group: common
         name: prepare-continuous-integration-rshiny
         nodeStep: 'true'
