--- a/rundeck-jobs/common/prepare-continuous-integration.yaml
+++ b/rundeck-jobs/common/prepare-continuous-integration.yaml
@@ -64,8 +64,7 @@
           --url @option.git_url_http@ \
           --project-id @option.project_id@ \
           --component-id @option.component_id@  \
-          --component-type @option.component_type@ \
-          --group-id @option.group_id@
+          --component-type @option.component_type@
     - description: add sonar-project.properties to generated project
       script: |-
         sudo chown @globals.rundeck_os_user@ -R @option.quickstarter_directory@
