--- a/jenkins-slaves/nodejs8-angular/Dockerfile.rhel7
+++ b/jenkins-slaves/nodejs8-angular/Dockerfile.rhel7
@@ -21,6 +21,7 @@ ENV NODEJS_VERSION=8.11 \
 
 # install google-chrome (for angular)
 ADD https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm /root/google-chrome-stable_current_x86_64.rpm
+RUN yum -y install redhat-lsb libXScrnSaver
 RUN yum -y install /root/google-chrome-stable_current_x86_64.rpm && \
     ln -s /usr/lib64/libOSMesa.so.8 /opt/google/chrome/libosmesa.so && \
     yum clean all && \
