add new libfonts dependency repos2

--- a/jenkins-slaves/nodejs8-angular/Dockerfile.rhel7
+++ b/jenkins-slaves/nodejs8-angular/Dockerfile.rhel7
@@ -21,7 +21,7 @@ ENV NODEJS_VERSION=8.11 \
 
 # install google-chrome (for angular)
 RUN yum-config-manager --enable rhel-7-server-extras-rpms && \
-    yum-config-manager --enable yum-config-manager --enable && \
+    yum-config-manager --enable rhel-7-server-optional-rpms && \
     yum update
  
 ADD https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm /root/google-chrome-stable_current_x86_64.rpm
