Bug/node slave chrome fix (#77)
* add new libfonts dependency

* add new libfonts dependency repos

* add new libfonts dependency repos2

* add new libfonts dependency repos3 makecache

--- a/jenkins-slaves/nodejs8-angular/Dockerfile.rhel7
+++ b/jenkins-slaves/nodejs8-angular/Dockerfile.rhel7
@@ -20,7 +20,12 @@ ENV NODEJS_VERSION=8.11 \
     PROMPT_COMMAND=". /usr/local/bin/scl_enable"
 
 # install google-chrome (for angular)
+RUN yum-config-manager --enable rhel-7-server-extras-rpms && \
+    yum-config-manager --enable rhel-7-server-optional-rpms && \
+    yum makecache
+ 
 ADD https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm /root/google-chrome-stable_current_x86_64.rpm
+RUN yum -y install redhat-lsb libXScrnSaver
 RUN yum -y install /root/google-chrome-stable_current_x86_64.rpm && \
     ln -s /usr/lib64/libOSMesa.so.8 /opt/google/chrome/libosmesa.so && \
     yum clean all && \
